WIP fix anchor tag jumping too far

--- a/client/src/stylesheets/tcpage.scss
+++ b/client/src/stylesheets/tcpage.scss
@@ -87,8 +87,9 @@ section.legal {
   }
 }
 
-section {
-  padding-top:78px;
+section h2,
+section h3 {
+  padding-top: 78px;
 }
 
 .section-title,
